logs/worldcat.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymarc'...
Listing './lib/python3.5/site-packages/pymarc-3.1.7.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/worldcat'...
Listing './lib/python3.5/site-packages/worldcat/request'...
Compiling './lib/python3.5/site-packages/worldcat/request/search.py'...
***   File "./lib/python3.5/site-packages/worldcat/request/search.py", line 63
    except urllib2.HTTPError, e:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/worldcat/response'...
Listing './lib/python3.5/site-packages/worldcat/util'...
Compiling './lib/python3.5/site-packages/worldcat/util/safeeval.py'...
***   File "./lib/python3.5/site-packages/worldcat/util/safeeval.py", line 77
    raise ValueError, "%s is not a valid expression" % expr
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/worldcat-0.3.6.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
